refactor(racingcar): 검증로직과 생성로직 해당 도메인으로 변경
- Factory와 Validator를 삭제하고 해당 도메인에서 처리하도록 변경
- 통합 테스트 작성
- 소문자 대문자 같은 이름으로 취급하도록 변경